language/move-lang/tests/move_check/borrows/assign_local_full_invalid.exp
error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:13:9 ───
    │
 13 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    ·
 12 │         let f = &x;
    │                 -- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:19:9 ───
    │
 19 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    ·
 18 │         let f = &mut x;
    │                 ------ It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:25:9 ───
    │
 25 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    ·
 24 │         let f = id(&x);
    │                 ------ It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/assign_local_full_invalid.move:31:9 ───
    │
 31 │         x = 0;
    │         ^ Invalid assignment of local 'x'
    ·
 30 │         let f = id_mut(&mut x);
    │                 -------------- It is still being mutably borrowed by this reference
    │

